k8s/argocd/argocd-ingress-route.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argocd.hughdo.dev`)
      priority: 100
      services:
        - name: argocd-server
          port: 80
    - kind: Rule
      match: Host(`argocd.hughdo.dev`) && Headers(`Content-Type`, `application/grpc`)
      priority: 101
      services:
        - name: argocd-server
          port: 80
          scheme: h2c
  tls:
    certResolver: default
