k8s/argocd/argocd-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    kubernetes.io/ingress.class: 'traefik'
    cert-manager.io/cluster-issuer: letsencrypt-prod
    acme.cert-manager.io/http01-edit-in-place: 'true'
spec:
  rules:
    - host: argocd.hughdo.dev
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: argocd-server
                port:
                  number: 80

  tls:
    - hosts:
        - argocd.hughdo.dev
      secretName: argocd-crt-secret
